[gd_scene load_steps=2 format=3 uid="uid://diqrk4bkerp82"]

[ext_resource type="Script" uid="uid://dshx15c5jfqly" path="res://Test/test_menu.gd" id="1_xn81e"]

[node name="TestMenu" type="CanvasLayer"]
script = ExtResource("1_xn81e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 6.0
offset_top = 673.0
offset_right = 222.0
offset_bottom = 798.0
size_flags_horizontal = 3

[node name="TestMoveContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Steps" type="TextEdit" parent="VBoxContainer/TestMoveContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Steps:"

[node name="MovePlayer" type="Button" parent="VBoxContainer/TestMoveContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Move"

[node name="Double" type="Button" parent="VBoxContainer/TestMoveContainer"]
layout_mode = 2
text = "Double"

[connection signal="pressed" from="VBoxContainer/TestMoveContainer/MovePlayer" to="." method="_on_move_player_pressed"]
[connection signal="pressed" from="VBoxContainer/TestMoveContainer/Double" to="." method="_on_double_pressed"]
